app/src/main/java/com/example/movietheatre/core/domain/util/error/RootError.kt
package com.example.movietheatre.core.domain.util.error

/**
 * This is the parent of every error types
 * */
interface RootError